api_versioned_docs/version-12.1.3/avalonia/controls/documents/serialization/xaml/xamlserializer.mdx
---
title: 'XamlSerializer'
hide_title: true
slug: '/avalonia/controls/documents/serialization/xaml/xamlserializer'
uid: 'Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer'
commentId: 'T:Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.Documents.Serialization.Xaml'
assembly: 'Avalonia.Controls.Documents.Serialization.Xaml'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.Serialization.Xaml'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">XamlSerializer Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Documents.Serialization.Xaml</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.Documents.Serialization.Xaml</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.Documents.Serialization.Xaml</code>
</div>
</div>

<div className="apiref-page__lead">

Serializer for Avalonia XAML (.axaml) documents.

</div>

<div className="apiref-page__signature">

```csharp
public class XamlSerializer
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> XamlSerializer
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> <a href="../idocumentserializer">IDocumentSerializer</a>
</div>
</div>

## Remarks

Produces lossless XAML that maps directly to the [FlowDocument](xref:Avalonia.Controls.Documents.FlowDocument) model.
Supports all block and inline types with their full formatting properties.

Uses [System.Xml.XmlReader](xref:System.Xml.XmlReader) and [System.Xml.XmlWriter](xref:System.Xml.XmlWriter)
for parsing and generation, avoiding dependency on Avalonia's XAML runtime loader.

This serializer is thread-safe for concurrent operations.

## Constructors

| Name | Description |
| --- | --- |
| [XamlSerializer (2 overloads)](#uid-16a5e876af) | Initializes a new instance with the default options. |

<span id="uid-16a5e876af"></span>

### XamlSerializer overloads

<section className="apiref-page__member-entry">

<span id="uid-853df4e3ff"></span>

#### XamlSerializer Constructor

Initializes a new instance with the default options.

```csharp
public XamlSerializer()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-05f726d5fa"></span>

#### XamlSerializer Constructor

Initializes a new instance of [Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer](xref:Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer) with optional serialization options.

```csharp
public XamlSerializer(Avalonia.Controls.Documents.Serialization.DocumentSerializerOptions options)
```

##### Parameters

`options` [Avalonia.Controls.Documents.Serialization.DocumentSerializerOptions](xref:Avalonia.Controls.Documents.Serialization.DocumentSerializerOptions)

Serialization options; defaults are used when .


</section>

## Methods

| Name | Description |
| --- | --- |
| [CanDeserialize](#uid-1d6095dbf1) | Checks if a stream appears to contain this format. |
| [Deserialize (2 overloads)](#uid-1ae1f33b1c) | Deserializes a document from a stream on the calling thread. |
| [DeserializeAsync](#uid-6817ed128e) | Runs [Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29) on a pool thread. |
| [Serialize (2 overloads)](#uid-385644ad57) | Serializes a document snapshot to a XAML string. |
| [SerializeAsync](#uid-521662fae0) | Runs [Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Serialize(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot,System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Serialize%28Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot%2CSystem.IO.Stream%2CSystem.Threading.CancellationToken%29) on a pool thread. |

<section className="apiref-page__member-entry">

<span id="uid-1d6095dbf1"></span>

### CanDeserialize Method

Checks if a stream appears to contain this format.

```csharp
public bool CanDeserialize(System.IO.Stream stream)
```

#### Parameters

`stream` System.IO.Stream

The stream to check. Must be readable and seekable.


#### Returns

bool

True if the stream likely contains this format; otherwise, false.


#### Remarks

This method does not consume the stream; it restores the original position after checking.

</section>

<span id="uid-1ae1f33b1c"></span>

### Deserialize overloads

<section className="apiref-page__member-entry">

<span id="uid-d0fd77b29c"></span>

#### Deserialize Method

Deserializes a document from a stream on the calling thread.

```csharp
public Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot Deserialize(System.IO.Stream stream, System.Threading.CancellationToken cancellationToken)
```

##### Parameters

`stream` System.IO.Stream

The stream to read from. Must be readable.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


##### Returns

[Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

The deserialized [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot).


##### Remarks

Defaults to blocking on [Avalonia.Controls.Documents.Serialization.IDocumentSerializer.DeserializeAsync(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.DeserializeAsync%28System.IO.Stream%2CSystem.Threading.CancellationToken%29), so a serializer written against
the released interface keeps working. Implement this member instead: no format here
performs asynchronous I/O, so the asynchronous pair only moves processor-bound work onto
a pool thread.

##### Exceptions

- [\`stream\` is null.](xref:System.ArgumentNullException)
- [\`stream\` is not readable.](xref:System.ArgumentException)
- [This serializer cannot read; see \[Avalonia.Controls.Documents.Serialization.IDocumentSerializer.CanRead\](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.CanRead).](xref:System.NotSupportedException)
- [The stream content is invalid for this format.](xref:Avalonia.Controls.Documents.Serialization.SerializationException)

</section>

<section className="apiref-page__member-entry">

<span id="uid-6255addc71"></span>

#### Deserialize Method

Deserializes a document from a XAML string.

```csharp
public Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot Deserialize(string xaml)
```

##### Parameters

`xaml` string

The XAML content string.


##### Returns

[Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

A new [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot) containing the parsed content.


</section>

<section className="apiref-page__member-entry">

<span id="uid-6817ed128e"></span>

### DeserializeAsync Method

Runs [Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29) on a pool thread.

```csharp
public System.Threading.Tasks.Task<Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot> DeserializeAsync(System.IO.Stream stream, System.Threading.CancellationToken cancellationToken)
```

#### Parameters

`stream` System.IO.Stream

The stream to read from.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


#### Returns

System.Threading.Tasks.Task&lt;[Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)&gt;

The deserialized snapshot.


#### Remarks

A thread-offload convenience, not asynchronous I/O: no format here reads asynchronously.
Where you are already off the UI thread, call [Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29) and keep the
thread you are on.

</section>

<span id="uid-385644ad57"></span>

### Serialize overloads

<section className="apiref-page__member-entry">

<span id="uid-1a8e2fba5b"></span>

#### Serialize Method

Serializes a document snapshot to a XAML string.

```csharp
public string Serialize(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot snapshot)
```

##### Parameters

`snapshot` [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

The document snapshot to serialize.


##### Returns

string

The XAML content string.


</section>

<section className="apiref-page__member-entry">

<span id="uid-71eeaf7a36"></span>

#### Serialize Method

Serializes a document snapshot to a stream on the calling thread.

```csharp
public void Serialize(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot snapshot, System.IO.Stream stream, System.Threading.CancellationToken cancellationToken)
```

##### Parameters

`snapshot` [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

The document snapshot to serialize.


`stream` System.IO.Stream

The stream to write to. Must be writable.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


##### Remarks

Defaults to blocking on [Avalonia.Controls.Documents.Serialization.IDocumentSerializer.SerializeAsync(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot,System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.SerializeAsync%28Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot%2CSystem.IO.Stream%2CSystem.Threading.CancellationToken%29), so a serializer written against the
released interface keeps working. Implement this member instead.

##### Exceptions

- [\`snapshot\` or \`stream\` is null.](xref:System.ArgumentNullException)
- [\`stream\` is not writable.](xref:System.ArgumentException)
- [This serializer cannot write; see \[Avalonia.Controls.Documents.Serialization.IDocumentSerializer.CanWrite\](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.CanWrite).](xref:System.NotSupportedException)

</section>

<section className="apiref-page__member-entry">

<span id="uid-521662fae0"></span>

### SerializeAsync Method

Runs [Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Serialize(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot,System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.Xaml.XamlSerializer.Serialize%28Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot%2CSystem.IO.Stream%2CSystem.Threading.CancellationToken%29) on a pool thread.

```csharp
public System.Threading.Tasks.Task SerializeAsync(Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot snapshot, System.IO.Stream stream, System.Threading.CancellationToken cancellationToken)
```

#### Parameters

`snapshot` [Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot](xref:Avalonia.Controls.Documents.Serialization.Snapshot.DocumentSnapshot)

The snapshot to serialize.


`stream` System.IO.Stream

The stream to write to.


`cancellationToken` System.Threading.CancellationToken

Cancellation token.


#### Returns

System.Threading.Tasks.Task


#### Remarks

A thread-offload convenience, not asynchronous I/O. The snapshot is already detached from
the document, so the work needs no UI thread either way.

</section>

## Properties

| Name | Description |
| --- | --- |
| [CanRead](#uid-6c8223b19c) | Whether this serializer supports reading. Read-only UIs can filter serializer lists on this instead of catching [NotSupportedException](xref:System.NotSupportedException) from [Avalonia.Controls.Documents.Serialization.IDocumentSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29). |
| [CanWrite](#uid-d27ac820ed) | Whether this serializer supports writing documents. |
| [FileExtension](#uid-39573d1c46) | Gets the file extension including the dot (e.g., ".rtf"). |
| [FormatName](#uid-ac1f5ae3cf) | Gets the format name this serializer handles (e.g., "Rtf", "Docx", "PlainText"). |
| [MimeType](#uid-fd1c7ad82a) | Gets the MIME type for the format (e.g., "application/rtf"). |

<section className="apiref-page__member-entry">

<span id="uid-6c8223b19c"></span>

### CanRead Property

Whether this serializer supports reading. Read-only UIs can filter serializer lists on
this instead of catching [NotSupportedException](xref:System.NotSupportedException) from
[Avalonia.Controls.Documents.Serialization.IDocumentSerializer.Deserialize(System.IO.Stream,System.Threading.CancellationToken)](xref:Avalonia.Controls.Documents.Serialization.IDocumentSerializer.Deserialize%28System.IO.Stream%2CSystem.Threading.CancellationToken%29).

```csharp
public bool CanRead { get; set; }
```

#### Remarks

Defaults to so a serializer written before this member existed
still compiles. A serializer that cannot read says so.

</section>

<section className="apiref-page__member-entry">

<span id="uid-d27ac820ed"></span>

### CanWrite Property

Whether this serializer supports writing documents.

```csharp
public bool CanWrite { get; set; }
```

#### Remarks

Defaults to so a serializer written before this member existed
still compiles. A serializer that cannot write says so.

</section>

<section className="apiref-page__member-entry">

<span id="uid-39573d1c46"></span>

### FileExtension Property

Gets the file extension including the dot (e.g., ".rtf").

```csharp
public string FileExtension { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ac1f5ae3cf"></span>

### FormatName Property

Gets the format name this serializer handles (e.g., "Rtf", "Docx", "PlainText").

```csharp
public string FormatName { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-fd1c7ad82a"></span>

### MimeType Property

Gets the MIME type for the format (e.g., "application/rtf").

```csharp
public string MimeType { get; set; }
```

</section>

</ApiRefPage>

